# iot_g4

./: .gitignore  README.md
Tarea2/: CMakeLists.txt  IoT_Tarea2.sql  example_data.txt
Tarea2/ESP32/: CMakeLists.txt  README.md  deep_sleep.c  empaquetamiento.c  fragmentacion.c  sdkconfig  sdkconfig.old  sensores.c  udp.c
Tarea2/ESP32/TCPClient/main/: CMakeLists.txt  tcp_client_v4.c
Tarea2/ESP32/UDPClient/main/: udp_client.c
Tarea2/ESP32/componentes/conexion/: tcp.c
Tarea2/ESP32/components/: CMakeLists.txt  cambiar_conexion.c  config.c  deep_sleep.c  utils.c
Tarea2/ESP32/components/conexion/: tcp.c  udp.c
Tarea2/ESP32/main/: CMakeLists.txt  main.c
Tarea2/Raspberry/: ClientTest.py  ConnectBLE.py  ConnectBLE_test.py  ServerTest.py  db.py  db_manager.py  findAddresses.py  main.py  main_gui.py  main_server.py  pruebas.py  raspberry.py  requirements.txt  socketTest.py  tcp.py  utils.py
Tarea2/Raspberry/ServerProtocols/BLE/: findAddresses.py
Tarea2/Raspberry/ServerProtocols/TCP/: TCPServer.py
Tarea2/Raspberry/ServerProtocols/UDP/: UDPServer.py
Tarea2/Raspberry/TCPServer/: TCPRaspServer.py
Tarea2/Raspberry/conexiones/: tcp.py  udp.py
Tarea2/Raspberry/db/: db.py
Tarea2/Raspberry/extra/qt/: compile_ui.py  esp_active_item.ui  icons.qrc  (+5 more)
Tarea2/Raspberry/gui/: active_ui.py  all_events.py  config_ui.py  error_handling.py  esp_dev.py  esp_lists.py  live_plot.py  properties.py  rasp.py  states.py  test.py  test_find.py  transitions.py  wifi_ui.py  workers.py
Tarea2/Raspberry/mensaje/: __init__.py  desempaquetamiento.py  header.py  protocol.py  sensor.py
(+36 files in other folders)
